# click-to-deploy

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Makefile  README.md  build.json  changes  cloudbuild-dispatcher.yaml  cloudbuild-docker-dispatcher.yaml  cloudbuild-docker-highcpu-vm.yaml  cloudbuild-docker.yaml  cloudbuild-k8s-generator.py  cloudbuild-k8s.yaml  cloudbuild-triggers-check.yaml  cloudbuild-vm.yaml  cloudbuild.yaml  cloudbuild_k8s_generator.py  cloudbuild_k8s_generator_test.py  docker.Dockerfile  go.sh  k8s.Dockerfile  run.sh  tmp-cloudbuild.yaml  trigger-solution-tests.sh  triggers-vm-generator.py  triggers-vm.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
cloudbuild/: Dockerfile  README.md  cloudbuild.yaml  fetch_submodules.sh  get_jwt.py  provision_github_app_key.sh  provision_github_deploy_key.sh  set_commit_status.sh  verifier.cloudbuild.yaml
docker/: .gitignore  DEVELOPMENT.md  GUIDELINES.md  README.md  \
k8s/: MARKETPLACE_TOOLS_TAG  README.md  app.Makefile  app_v2.Makefile  app_v2_1.Makefile  c2d_deployer.Makefile  common.Makefile  crd.Makefile  gcloud.Makefile  images.Makefile  var.Makefile
scripts/: cloudbuild_k8s_generator.py  cloudbuild_k8s_generator_test.py  download-licenses.sh  download-ref-repos.sh  download-repos.sh  extra_configs.json  kalm_clean.py  kalm_clean_test.py  sync_k8s_triggers.py  trigger-solution-tests.sh  triggers_check.sh  triggers_vm_generator.py  update-k8s-readme.sh  (+1 more)
tools/dockerversioning/scripts/cloudbuild/: BUILD.bazel  main.go
tools/dockerversioning/versions/: BUILD.bazel  versions.go
(+5744 files in other folders)
