package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
)

go_library(
    name = "go_default_library",
    srcs = ["versions.go"],
    importpath = "github.com/GoogleCloudPlatform/click-to-deploy/tools/dockerversioning/versions",
    deps = [
        "@com_github_gopkg_v2//:go_default_library",
    ],
)
