load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/click-to-deploy/tools/dockerversioning/scripts/cloudbuild",
    visibility = ["//visibility:private"],
    deps = ["//dockerversioning/versions:go_default_library"],
)

go_binary(
    name = "cloudbuild",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
